Fix readmore button from being cutoff

--- a/assets/css/moxieleague.css
+++ b/assets/css/moxieleague.css
@@ -470,10 +470,10 @@ p.main-feature {
 	font-size: 14px;
 	font-weight: 500;
 	font-family: "Renner*";
-	padding-left: 12.5%;
-	padding-right: 12.5%;
-	padding-top: 5%;
-	padding-bottom: 5%;
+	padding-left: 15.5%;
+	padding-right: 15.5%;
+	padding-top: 7.5%;
+	padding-bottom: 7.5%;
 	margin-right: 5%;
 }
 
